@startuml
'https://plantuml.com/class-diagram

class Pessoa {
    String nome
    String endereco
    String telefone
    String cpf
    String telefoneCelular
}

class Aluno {
    String curso
    double[] notas
    double calcularMedia()
    boolean verificarAprovado()
}

class Professor {
    String nomeCurso
    double salario
    double calcularSalarioLiquido()
}

Pessoa <|-- Aluno
Pessoa <|-- Professor

@enduml